--- a/elast_unf.ipynb
+++ b/elast_unf.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2f19ce2b",
+   "id": "99c7a37f",
    "metadata": {},
    "outputs": [
     {
@@ -72,8 +72,7 @@
     "#Draw(u, mesh, \"def\")\n",
     "#Draw (CF(1), mesh, \"C(u)\")\n",
     "\n",
-    "#scene = DrawDC(lsetadap.levelsetp1[TOP], u_last, 0, mesh, \"u_last\",\n",
-    "#                deformation=lsetadap.deformation[TOP])\n",
+    "scene = DrawDC(lsetmeshadap.lset_p1, CF(1), 0, mesh, \"1\", deformation=u)\n",
     "\n",
     "deformation_at_bottom_right = u(mesh(1,0))\n",
     "print(deformation_at_bottom_right)"
@@ -82,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6ac1e53",
+   "id": "89a8c2f0",
    "metadata": {},
    "outputs": [],
    "source": []
